fix glossary scrolling issue on firefox

--- a/MOOC/assets/app.css
+++ b/MOOC/assets/app.css
@@ -116,10 +116,13 @@ hr {
 .h-glossary > .column {
     padding: 0 !important;
 }
+.h-glossary > .column,
 .h-glossary .ui.card {
-    border-radius: 0;
     min-height: 100%;
     height: 100%;
+}
+.h-glossary .ui.card {
+    border-radius: 0;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.15)!important;
     overflow-y: scroll;
     padding-right: 17px;
